# data-demo

./: .flake8  .pre-commit-config.yaml  .sqlfluff  Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
app/: .sqlfluff  containertest.py  test2.py
code/: .flake8  test.py  test2.sql
data_demo/: __init__.py
tests/: __init__.py  test_env_demo.py
