[tool.poetry]
name = "env-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.3.0"
flake8 = "^4.0.1"
sqlfluff = "^0.12.0"
flake8-docstrings = "^1.6.0"
flake8-comments = "^0.1.2"
dbt-redshift = "^1.0.0"
sqlfluff-templater-dbt = "^0.12.0"
pre-commit = "^2.18.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | .devcontainer
    | data_demo
    | tests
    | \.flake8
    | \.sqlfluff
    | Dockerfile
    | \.lock
    | \.toml
  )/        
)                 
'''
